~ Chuc nang 2.3 + Them DAL va BLL chi DiaDiem ! Hoan thanh form frmQuanLyDiaDiem ! Sua BLL, DAL lien quan: BLL_SanBay, ! Sua cac form lien quan: frmQuanLySanBay, frmSuaSanBay, frmThemSanBay

--- a/BVCB/BanVeChuyenBay/BanVeChuyenBay.csproj
+++ b/BVCB/BanVeChuyenBay/BanVeChuyenBay.csproj
@@ -116,6 +116,7 @@
     <Compile Include="BLL\BLL_CT_Ghe.cs" />
     <Compile Include="BLL\BLL_CT_LichChuyenBay.cs" />
     <Compile Include="BLL\BLL_CT_PhieuDatCho.cs" />
+    <Compile Include="BLL\BLL_DiaDiem.cs" />
     <Compile Include="BLL\BLL_HangVe.cs" />
     <Compile Include="BLL\BLL_LichChuyenBay.cs" />
     <Compile Include="BLL\BLL_NhanVien.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="DAL\DAL_CT_Ghe.cs" />
     <Compile Include="DAL\DAL_CT_LichChuyenBay.cs" />
     <Compile Include="DAL\DAL_CT_PhieuDatCho.cs" />
+    <Compile Include="DAL\DAL_DiaDiem.cs" />
     <Compile Include="DAL\DAL_HangVe.cs" />
     <Compile Include="DAL\DAL_KetNoi.cs" />
     <Compile Include="DAL\DAL_LichChuyenBay.cs" />
