!frmSuaChuyenBay: cbHangHangKhong gio doi khi chon chuyen bay !Them thong tin hang hang khong o form: QuanLyChuyenBay, VeChuyenBay, PhieuDatCho !frmPhieuDatCho: gio ngay dat se lay ngay hien tai he thong thay vi chon !Sua icon hang hang khong o LichChuyenBay

--- a/BVCB/BanVeChuyenBay/BanVeChuyenBay.csproj
+++ b/BVCB/BanVeChuyenBay/BanVeChuyenBay.csproj
@@ -572,6 +572,7 @@
     <None Include="DataBase\script.sql" />
     <None Include="DataBase\CheckTable.sql" />
     <None Include="Resources\currency-icon.png" />
+    <None Include="Resources\Air-travel-icon.png" />
     <Content Include="Resources\currency.jpg" />
     <None Include="Resources\EUFlag.jpg" />
     <None Include="Resources\JapanFlag.png" />
